# hm3

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Readme.md  _config.yml  configure.sh  index.md  license.md  readme.md  sanitize.blacklist
_includes/: acknowledgments  directory_structure
_layouts/: default.html
cmake/: FindEigen3.cmake  Findhm3_resources.cmake  Findjson.cmake  Findrange-v3.cmake  Findspdlog.cmake  Findvariant.cmake  configure.py  format.py  generate_site.py  hm3_compiler_flags.cmake  hm3_options.cmake  hm3_packages.cmake  hm3_targets.cmake  hm3_tidy.cmake  modularize.py  tidy.py
contribute/: index.md
doc/: CMakeLists.txt  Doxyfile.in
documentation/: index.md
documentation/fv_ib/: index.md
documentation/physics/: report.md
doxygen/html/: annotated.html  classes.html  dir_05b77cae73b56e05de41cee44cf903ee.html  dir_10427cfb8a142f711091006467bebab8.html  dir_119249f699458adb252f71c2f9c0d86a.html  dir_1963f91c2246c5bff63bc8093ed35a63.html  dir_31b1d18c27b632797f046042a7ac36d8.html  dir_338a8729ad74f596efbe2b07b20278f8.html  dir_3424f9013ad18a8eccdb348206e45b88.html  dir_363697b476643c700fd720178d239320.html  dir_4d44fec6692873f7b420dd2f5f143b63.html  doxygen.css  formula.repository  (+219 more)
getting_started/: index.md
hm3/: index.md
site/: CMakeLists.txt  _config.yml  generate.py  index.md  license.md
test/: CMakeLists.txt
test/core/: CMakeLists.txt  arithmetic.cpp  cold_do.cpp  core.cpp  heap_buffer.cpp  integral.cpp  mpi.cpp  ranges.cpp  thrust.cpp
test/core/matrix/: CMakeLists.txt  bit_dense.cpp  dense.cpp
test/core/stack/: CMakeLists.txt  allocator.cpp  arena.cpp  vector.cpp
test/hm3/geometry/: aabb.cpp  aabb.hpp  box.cpp  dimension.cpp  implicit.cpp  line.cpp  point.cpp  point_set.cpp  polygon.cpp  rank.cpp  sd.cpp  segment.cpp  square.cpp  triangle.cpp
test/hm3/geometry/algorithm/: intersection_sd_triangle.cpp
test/hm3/geometry/algorithm/concatenate/: points.cpp  polylines.cpp  segments.cpp
test/hm3/geometry/algorithm/intersection/: aabb_aabb.cpp  line_line.cpp  line_point.cpp  point_point.cpp  polygon_point.cpp  polygon_polyline.cpp  polygon_segment.cpp  polygon_segments.cpp  ray_aabb.cpp  ray_point.cpp  ray_segment.cpp  segment_point.cpp  segment_segment.cpp  triangle_sd.cpp
test/hm3/geometry/algorithm/merge/: segments.cpp
test/hm3/geometry/algorithm/sd_intersection/: polygon.cpp  segment.cpp  triangle.cpp
test/hm3/geometry/algorithm/sd_split/: polygon.cpp
test/hm3/geometry/algorithm/split/: polygon_polyline.cpp  polygon_polylines.cpp  polyline_point.cpp  polyline_points.cpp  segment_point.cpp
test/hm3/geometry/data_structure/: bvh.cpp  point_set.cpp  simplex_array.cpp
test/hm3/geometry/dimension/: dimension.cpp  dimension.hpp  dimensional.cpp  dimensions.cpp
test/hm3/geometry/io/: stl.cpp
test/hm3/geometry/polygon/: intersection.cpp  polygon.cpp
test/hm3/geometry/primitive/: aabb.cpp  aabb.hpp  any.cpp  box.cpp  line.cpp  plane.cpp  point.cpp  polygon.cpp  polyhedron.cpp  polyline.cpp  ray.cpp  segment.cpp  simplex.cpp  some.cpp  vector.cpp
test/hm3/geometry/sd/: aabb.cpp  plane.cpp  sphere.cpp
test/hm3/geometry/simplex/: mesh.cpp  simplex.cpp  simplices.cpp
test/hm3/grid/hc/: grid.hpp  grid_1d.cpp  grid_2d.cpp  grid_3d.cpp  multi_1d.cpp  multi_2d.cpp  multi_3d.cpp  node.cpp
test/hm3/grid/hierarchical/: grid.hpp  grid_1d.cpp  grid_2d.cpp  grid_3d.cpp  multi_1d.cpp  multi_2d.cpp  multi_3d.cpp  node.cpp
test/hm3/grid/hierarchical/client/: multi.cpp  neighbor_storage.cpp
test/hm3/grid/hierarchical/tree/: relations.cpp  tree.hpp  tree_1d.cpp  tree_1d.hpp  tree_2d.cpp  tree_2d.hpp  tree_3d.cpp  tree_3d.hpp  tree_internals.cpp
test/hm3/grid/hierarchical/tree/location/: deinterleaved.cpp  fast.cpp  interleaved.cpp  slim.cpp  test.hpp
test/hm3/grid/structured/: grid.cpp  halos.cpp  indices.cpp  print_grid.hpp  tile.cpp
test/hm3/grid/structured/halo_tile/: bounds.cpp  geometry.cpp  indices.cpp
test/hm3/grid/structured/tile/: geometry.cpp  tile.cpp
test/hm3/grid/structured/tile/cell/: bounds.cpp  coordinate.hpp  indices.cpp
test/hm3/grid/structured/tile/surface/: bounds.cpp  coordinate.cpp  indices.cpp  indices.hpp
test/hm3/interpolation/: line.cpp
test/hm3/io/: file.cpp  file_system.cpp  properties.cpp  session.cpp
test/hm3/math/: core.cpp
test/hm3/math/integral/: gauss_legendre.cpp
test/hm3/math/interpolation/: linear.cpp
test/hm3/math/matrix/: bit_matrix.cpp  matrix.cpp
test/hm3/solver/fv/: advection.cpp  advection_1d.cpp  advection_2d.cpp  euler2d.cpp  euler2d_2.cpp  heat2d.cpp
test/hm3/solver/fv/euler/: euler.hpp
test/hm3/solver/fv/heat/: slab2d.cpp  slab_convergence.hpp  sphere2d.cpp
test/hm3/solver/geometry/: discrete_domain.cpp
test/hm3/solver/geometry/boundary_cell/: cell.cpp  surface.cpp
test/hm3/solver/geometry/domain/: discrete.cpp
test/hm3/solver/geometry/io/: stl.cpp  stl2.cpp
test/hm3/solver/geometry/surface/: boundary.cpp  cell.cpp  internal.cpp
test/hm3/solver/lbm/: lbm_test1.cpp  lbm_test2.cpp  lbm_test3.cpp
test/hm3/solver/level_set/: sphere_2d.cpp
test/hm3/solver/state/: grid.cpp  neighbors.cpp
test/hm3/solver/utility/: structured_grid.cpp  tiled_hierarchical_grid.cpp
test/hm3/tree/: relations.cpp  tree.hpp  tree_1d.cpp  tree_1d.hpp  tree_2d.cpp  tree_2d.hpp  tree_3d.cpp  tree_3d.hpp  tree_internals.cpp
test/hm3/tree/location/: fast.cpp  slim.cpp  test.hpp
test/hm3/utility/: CMakeLists.txt  bit.cpp  cold_do.cpp  compact_optional.cpp  embedded_storage.cpp  fixed_capacity_vector.cpp  flat_set.cpp  heap_buffer.cpp  inline_vector.cpp  integral.cpp  math.cpp  mpi.cpp  optional.cpp  small_vector.cpp  stack_vector.cpp  string_parsing.cpp
test/hm3/utility/matrix/: bit_matrix.cpp  matrix.cpp
test/hm3/utility/stack/: allocator.cpp  arena.cpp  vector.cpp
vis/: CMakeLists.txt  dump.py
vis/paraview/: CMakeLists.txt  vtkHM3Reader.cxx  vtkHM3Reader.h  vtkHM3ReaderServConf.xml
vis/paraview/tree_reader/: CMakeLists.txt  pqDualComboBox.cxx  pqDualComboBox.h  vtkH3TreeReader.cxx  vtkH3TreeReader.h  vtkH3TreeReaderServConf.xml
(+1219 files in other folders)
